feat:update lm_adapter
Add reasoning param + refactor

--- a/graph_tests.ipynb
+++ b/graph_tests.ipynb
@@ -14,8 +14,7 @@
    "id": "e4034f6c",
    "metadata": {},
    "source": [
-    "## simple check if everything working fine\n",
-    "If it is there will be text from the model"
+    "## simple check if everything working fine"
    ]
   },
   {
@@ -28,45 +27,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The question *\"What is the meaning of life?\"* is one of the most profound and enduring philosophical inquiries. There is no single, universally accepted answer, but different perspectives offer insights:\n",
+      "The question of life's meaning is one of humanity's oldest and deepest philosophical inquiries, with no single, universally agreed-upon answer. Perspectives vary widely:\n",
       "\n",
-      "### **1. Philosophical Perspectives**\n",
-      "- **Existentialism (Sartre, Camus, Nietzsche):** Life has no inherent meaning—it’s up to each individual to create their own purpose through choices, actions, and passions.\n",
-      "- **Absurdism (Camus):** Life may lack intrinsic meaning, but we must embrace the absurd and find joy in the struggle itself.\n",
-      "- **Stoicism:** Meaning comes from living virtuously, accepting what we cannot control, and focusing on reason and self-improvement.\n",
-      "- **Utilitarianism:** The meaning of life is to maximize happiness and reduce suffering for the greatest number of beings.\n",
+      "1.  **Philosophical Perspectives:**\n",
+      "    *   **Existentialism (Sartre, Camus):** Life has no inherent, predefined meaning. We must *create* our own meaning through choices, actions, and commitments. The responsibility is both liberating and daunting.\n",
+      "    *   **Religious/Spiritual:** Meaning comes from fulfilling a divine purpose, connecting with a higher power (God, Brahman, Tao), following sacred teachings, achieving enlightenment, or preparing for an afterlife. Examples: Serving God (Judaism, Christianity, Islam), achieving Nirvana (Buddhism), fulfilling Dharma (Hinduism).\n",
+      "    *   **Humanism:** Meaning arises from human potential, reason, ethics, compassion, and improving the well-being of humanity and the world through science, art, social progress, and personal growth.\n",
+      "    *   **Nihilism:** Life has no intrinsic meaning, value, or purpose. This can be bleak, but also seen as liberating from imposed structures.\n",
+      "    *   **Hedonism:** Meaning is found in maximizing pleasure, happiness, and minimizing pain (though often nuanced beyond simple indulgence).\n",
+      "    *   **Absurdism (Camus):** The human desire for meaning clashes with the universe's apparent meaninglessness. Meaning comes from defiantly embracing this absurdity and living passionately anyway.\n",
       "\n",
-      "### **2. Religious & Spiritual Views**\n",
-      "- **Christianity/Judaism/Islam:** Life’s purpose is to serve, love, and connect with God, following divine will.\n",
-      "- **Buddhism/Hinduism:** Meaning comes from enlightenment (breaking free from suffering) or fulfilling one’s *dharma* (duty) while progressing toward *moksha* (liberation).\n",
-      "- **Taoism:** Harmony with the natural flow (*Tao*) and living simply bring meaning.\n",
-      "- **Pantheism/Panentheism:** Meaning arises from being part of a greater, sacred universe.\n",
+      "2.  **Scientific Perspective:**\n",
+      "    *   **Biology:** From a strictly biological standpoint, the \"purpose\" of life is survival and reproduction – passing on genetic material to the next generation. Complexity and evolution are driven by this imperative.\n",
+      "    *   **Cosmology:** On a cosmic scale, life is a rare and complex phenomenon arising from physical laws. Its \"meaning\" isn't inherent but emerges from its existence against improbable odds.\n",
       "\n",
-      "### **3. Scientific & Evolutionary Views**\n",
-      "- **Biological Perspective:** Life’s \"purpose\" is survival, reproduction, and passing on genes (though this is descriptive, not prescriptive).\n",
-      "- **Cosmic Perspective (Carl Sagan, Neil deGrasse Tyson):** We are the universe’s way of understanding itself—meaning comes from exploration, discovery, and connection.\n",
-      "- **Transhumanism:** Meaning may evolve as humanity merges with technology, extending life and consciousness.\n",
+      "3.  **Personal/Subjective Meaning:** Most individuals find meaning in concrete aspects of their lives:\n",
+      "    *   **Relationships & Love:** Deep connections with family, friends, partners, community.\n",
+      "    *   **Purpose & Contribution:** Work, creativity, helping others, making a positive impact, leaving a legacy.\n",
+      "    *   **Growth & Experience:** Learning, pursuing passions, overcoming challenges, seeking knowledge, appreciating beauty and wonder.\n",
+      "    *   **Values & Principles:** Living according to one's deeply held ethical or moral beliefs.\n",
       "\n",
-      "### **4. Personal & Subjective Meaning**\n",
-      "Many find purpose in:\n",
-      "- **Love & Relationships** (family, friends, partners)\n",
-      "- **Creativity & Self-Expression** (art, music, writing)\n",
-      "- **Contribution & Legacy** (helping others, leaving an impact)\n",
-      "- **Growth & Learning** (knowledge, skills, wisdom)\n",
-      "- **Experiences & Joy** (travel, adventure, simple pleasures)\n",
+      "**Key Takeaways:**\n",
       "\n",
-      "### **A Possible Synthesis**\n",
-      "Life may not have a *predefined* meaning, but it gains significance through:\n",
-      "- **Connection** (to people, nature, ideas)\n",
-      "- **Curiosity** (exploring the unknown)\n",
-      "- **Compassion** (reducing suffering)\n",
-      "- **Creation** (building, innovating, expressing)\n",
-      "- **Presence** (appreciating the moment)\n",
+      "*   **No Universal Answer:** There is no single, objective \"meaning of life\" proven true for everyone.\n",
+      "*   **Meaning is Often Discovered, Not Found:** It's less about uncovering a cosmic secret and more about creating, cultivating, and recognizing significance in your own existence through your actions, relationships, and values.\n",
+      "*   **It's Personal:** What feels deeply meaningful to one person might seem trivial to another. Your meaning is uniquely yours.\n",
+      "*   **Dynamic:** Meaning can evolve throughout your life as you gain new experiences and perspectives.\n",
+      "*   **The Search Itself is Meaningful:** The act of questioning, exploring, and striving for understanding can be a core part of a meaningful life.\n",
       "\n",
-      "Ultimately, the search for meaning *is* part of what makes life meaningful. As Viktor Frankl (Holocaust survivor and psychiatrist) wrote in *Man’s Search for Meaning*:\n",
-      "> *\"Life is never made unbearable by circumstances, but only by lack of meaning and purpose.\"*\n",
+      "**In essence: The meaning of life is a question without a single answer, but it's deeply connected to love, connection, purpose, growth, contribution, and the subjective significance we find in our brief existence.** What matters most is what feels meaningful and fulfilling to *you*. Viktor Frankl, a psychiatrist and Holocaust survivor, famously argued that meaning can be found even in immense suffering through our attitude and the purpose we choose to embrace.\n",
       "\n",
-      "What gives *your* life meaning? That may be the most important question. 🌟"
+      "If you're grappling with this question deeply, it might be helpful to explore philosophy, different spiritual traditions, talk to trusted individuals, or reflect on what truly matters to you personally."
      ]
     }
    ],
@@ -90,7 +81,15 @@
     "        \"HTTP-Referer\": \"<YOUR_SITE_URL>\",  # Optional. Site URL for rankings on openrouter.ai.\n",
     "        \"X-Title\": \"<YOUR_SITE_NAME>\",  # Optional. Site title for rankings on openrouter.ai.\n",
     "    },\n",
-    "    extra_body={},\n",
+    "    extra_body={\n",
+    "\n",
+    "        \"reasoning\": {\n",
+    "\n",
+    "            \"effort\": \"none\" # Resoning turned off by note: https://openrouter.ai/xiaomi/mimo-v2-flash:free\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "    },\n",
     "    model=MODEL_NAME,\n",
     "    messages=[{\"role\": \"user\", \"content\": \"What is the meaning of life?\"}],\n",
     "    stream=True,\n",
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "658183c5",
    "metadata": {},
    "outputs": [],
@@ -132,6 +131,15 @@
     "raw_client = OpenAI(\n",
     "    base_url=\"https://openrouter.ai/api/v1\",\n",
     "    api_key=AI_API_KEY,\n",
+    "    extra_body={\n",
+    "\n",
+    "        \"reasoning\": {\n",
+    "\n",
+    "            \"effort\": \"none\" # Resoning turned off by note: https://openrouter.ai/xiaomi/mimo-v2-flash:free\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "    },\n",
     ")\n",
     "\n",
     "client = LLMClient(raw_client,MODEL_NAME, \"Ты полезный ассистент\")\n",
@@ -151,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f0ebc914",
    "metadata": {},
    "outputs": [
@@ -192,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "46ff4eed",
    "metadata": {},
    "outputs": [
@@ -295,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "63f99d19",
    "metadata": {},
    "outputs": [
@@ -405,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "86fd6d1f",
    "metadata": {},
    "outputs": [
@@ -487,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "69199a15",
    "metadata": {},
    "outputs": [
@@ -570,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b0419153",
    "metadata": {},
    "outputs": [
@@ -733,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "d8dc379c",
    "metadata": {},
    "outputs": [
